--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "docs.tar.gz": 1df4e63307eec670f7309932bd43d1a8546189bf
-  "h5py-2.1.0.tar.gz": 694af7bb9640003fe0264baa4382d1e84908def1
+  docs.tar.gz: 1df4e63307eec670f7309932bd43d1a8546189bf
+  h5py-2.10.0.tar.gz: 007de8e8cce4f07b9c12d178f48b5e2673825421
